--- a/index.html
+++ b/index.html
@@ -1,59 +1,81 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Static Template</title>
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
   </head>
   <body>
-    <h1 class="head">Top 3 Grass</h1>
-    <div>
-      <div class="outline">
-        <h2 class="beach">number 1</h2>
-        <h3 class="beta">OUTSIDE GRASS</h3>
-        <div>
+    <div class="container">
+      <h2 class="heading-text">Top 9<span> animes of all time</span></h2>
+      <ul class="image-gallery">
+        <li>
           <img
-            class="meme"
-            src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Grass_closeup.JPG/1200px-Grass_closeup.JPG"
+            src="https://dailyanimeart.files.wordpress.com/2015/10/one-punch-man-poster.jpg"
+            alt=""
           />
-        </div>
-        <h2 class="alpha">
-          <a href="https://floridaman.com/humps-tree-punches-deputy/"
-            >(you dont touch this)</a
-          >
-        </h2>
-      </div>
-      <div class="outline">
-        <h2 class="beach">number 2</h2>
-        <h3 class="beta">TURF</h3>
-        <div>
+          <div class="overlay"><span>number 3</span></div>
+        </li>
+        <li>
           <img
-            class="meme"
-            src="https://th.bing.com/th/id/R.ea32fc7ed3521c9c0d0423f4dc0db966?rik=3B75MjGMCdpyCg&riu=http%3a%2f%2fanglianmanagementgroup.com%2fwp-content%2fuploads%2f2016%2f10%2fStanford-Soccer-e1466806188164.jpg&ehk=N%2fouDG8oaTXuOi2PEEksfkXBxfFOSTk2Wum1DcYa57E%3d&risl=&pid=ImgRaw&r=0"
+            src="https://th.bing.com/th/id/OIP.6DRR1eFnOlHAtRZkQu233AHaLH?pid=ImgDet&rs=1"
+            alt=""
           />
-        </div>
-        <h2 class="alpha">
-          <a href="https://floridaman.com/humps-tree-punches-deputy/"
-            >(you dont use this)</a
-          >
-        </h2>
-      </div>
-      <div class="outline">
-        <h2 class="beach">number 3</h2>
-        <h3 class="beta">NOT GRASS</h3>
-        <div>
+          <div class="overlay"><span>Image title</span></div>
+        </li>
+        <li>
           <img
-            class="meme"
-            src="https://3.files.edl.io/aeb1/20/12/02/154937-46cc468f-b7f4-4bb3-945e-3265bdb605d4.jpg"
+            src="https://image.tmdb.org/t/p/original/hqRb1wyIVsaMukZElPBUXoJPqrR.jpg"
+            alt=""
           />
-        </div>
-        <h2 class="alpha">
-          <a href="https://floridaman.com/humps-tree-punches-deputy/"
-            >(not grass)</a
-          >
-        </h2>
-      </div>
+          <div class="overlay"><span>Image title</span></div>
+        </li>
+        <li>
+          <img
+            src="https://image.tmdb.org/t/p/original/wa54bdvYLsZgE0yy7rqETxY6OE1.jpg"
+            alt=""
+          />
+          <div class="overlay"><span>Image title</span></div>
+        </li>
+        <li>
+          <img
+            src="https://i5.walmartimages.com/asr/dca1225f-cfec-4588-bdad-294c27af8af3.ed59619c11f73297fece01b93d038791.jpeg?odnWidth=1000&odnHeight=1000&odnBg=ffffff"
+            alt=""
+          />
+          <div class="overlay"><span>Image title</span></div>
+        </li>
+        <li>
+          <img
+            src="https://d1x7zurbps6occ.cloudfront.net/product/xlarge/495278-148434.jpg"
+            alt=""
+          />
+          <div class="overlay"><span>Image title</span></div>
+        </li>
+        <li>
+          <img
+            src="https://th.bing.com/th/id/R.4d50194c20f6965def0c895dfdd6560d?rik=68ssnwKBq%2befeQ&pid=ImgRaw&r=0"
+            alt=""
+          />
+          <div class="overlay"><span>Image title</span></div>
+        </li>
+        <li>
+          <img
+            src="https://th.bing.com/th/id/OIP.JGXihCRfEIjk6LJT0-a9LAHaK5?pid=ImgDet&rs=1"
+            alt=""
+          />
+          <div class="overlay"><span>Image title</span></div>
+        </li>
+
+        <li>
+          <img
+            src="https://image.tmdb.org/t/p/original/hmxpys0rMXPJXmbqAxsd2AkNb1Y.jpg"
+            alt=""
+          />
+          <div class="overlay"><span>Image title</span></div>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
