--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@
           />
           <div class="overlay"><span>number 3</span></div>
         </li>
+        <div class="onebutton">
+          <div class="button-1">
+            <div class="eff-1"></div>
+            <a href="#"> Touch me </a>
+          </div>
+          <div class="button-2">
+            <div class="eff-2"></div>
+            <a href="#"> Touch me </a>
+          </div>
+          <div class="button-3">
+            <div class="eff-3"></div>
+            <a href="#"> Touch me </a>
+          </div>
+        </div>
         <li>
           <img
             src="https://image.tmdb.org/t/p/original/hqRb1wyIVsaMukZElPBUXoJPqrR.jpg"
@@ -53,6 +67,20 @@
           />
           <div class="overlay"><span>number 6</span></div>
         </li>
+        <div class="onebutton">
+          <div class="button-4">
+            <div class="eff-4"></div>
+            <a href="#"> Touch me </a>
+          </div>
+          <div class="button-5">
+            <div class="eff-5"></div>
+            <a href="#"> Touch me </a>
+          </div>
+          <div class="button-6">
+            <div class="eff-6"></div>
+            <a href="#"> Touch me </a>
+          </div>
+        </div>
         <li>
           <img
             src="https://dailyanimeart.files.wordpress.com/2015/10/one-punch-man-poster.jpg"
@@ -75,6 +103,20 @@
           />
           <div class="overlay"><span>number 9</span></div>
         </li>
+        <div class="onebutton">
+          <div class="button-7">
+            <div class="eff-7"></div>
+            <a href="#"> Touch me </a>
+          </div>
+          <div class="button-8">
+            <div class="eff-8"></div>
+            <a href="#"> Touch me </a>
+          </div>
+          <div class="button-3">
+            <div class="eff-3"></div>
+            <a href="#"> Touch me </a>
+          </div>
+        </div>
       </ul>
     </div>
   </body>
