--- a/index.html
+++ b/index.html
@@ -35,15 +35,27 @@
         <div class="onebutton">
           <div class="button-1">
             <div class="eff-1"></div>
-            <a href="#"> Touch me </a>
+            <a href="https://www.imdb.com/title/tt0877057/" target="_blank">
+              watch me
+            </a>
           </div>
           <div class="button-2">
             <div class="eff-2"></div>
-            <a href="#"> Touch me </a>
+            <a
+              href="https://www.justanswer.com/mental-health/4kpcg-addicted-bdsm-want-quit-help.html?r=impact%7C2003851%7CBlogger.com%20Tech%20Support%20-%20Text%20Link%7C&clickid=wH42LXwk3xyNWp6RCSVrQ2oHUkDQRYx2tRPJ0Q0&aff_sub_id=EdgeBingFlow&aff_sub_id2=tuid%3A2C5CB702201E6F832C4AA51B21B66EDF&aff_sub_id3=&aff_sub_id4=&chat_text=&irgwc=1"
+              target="_blank"
+            >
+              watch me
+            </a>
           </div>
           <div class="button-3">
             <div class="eff-3"></div>
-            <a href="#"> Touch me </a>
+            <a
+              href="https://doctor.ndtv.com/living-healthy/pedophilia-a-disorder-not-a-crime-1800175"
+              target="_blank"
+            >
+              watch me
+            </a>
           </div>
         </div>
         <li>
@@ -70,15 +82,24 @@
         <div class="onebutton">
           <div class="button-4">
             <div class="eff-4"></div>
-            <a href="#"> Touch me </a>
+            <a href="https://www.imdb.com/title/tt2560140/" target="_blank">
+              watch me
+            </a>
           </div>
           <div class="button-5">
             <div class="eff-5"></div>
-            <a href="#"> Touch me </a>
+            <a
+              href="https://www.reddit.com/r/teenagers/comments/bgoimj/i_have_a_crippling_addiction_to_anime_girls/"
+              target="_blank"
+            >
+              watch me
+            </a>
           </div>
           <div class="button-6">
             <div class="eff-6"></div>
-            <a href="#"> Touch me </a>
+            <a href="https://www.imdb.com/title/tt2250192/" target="_blank">
+              watch me
+            </a>
           </div>
         </div>
         <li>
@@ -106,15 +127,24 @@
         <div class="onebutton">
           <div class="button-7">
             <div class="eff-7"></div>
-            <a href="#"> Touch me </a>
+            <a href="https://www.imdb.com/title/tt4508902/" target="_blank">
+              watch me
+            </a>
           </div>
           <div class="button-8">
             <div class="eff-8"></div>
-            <a href="#"> Touch me </a>
+            <a
+              href="https://www.learning-mind.com/why-do-i-hate-myself/"
+              target="_blank"
+            >
+              watch me
+            </a>
           </div>
           <div class="button-3">
             <div class="eff-3"></div>
-            <a href="#"> Touch me </a>
+            <a href="https://www.imdb.com/title/tt0388629/" target="_blank">
+              watch me
+            </a>
           </div>
         </div>
       </ul>
