--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Static Template</title>
+    <title>top 10 animes</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -20,7 +20,7 @@
         </li>
         <li>
           <img
-            src="https://th.bing.com/th/id/OIP.6DRR1eFnOlHAtRZkQu233AHaLH?pid=ImgDet&rs=1"
+            src="https://img.reelgood.com/content/show/4a0139ce-d0ea-4bb0-997c-fbd41b706d67/poster-780.jpg"
             alt=""
           />
           <div class="overlay"><span>number 2</span></div>
@@ -74,7 +74,7 @@
         </li>
         <li>
           <img
-            src="https://image.tmdb.org/t/p/original/hmxpys0rMXPJXmbqAxsd2AkNb1Y.jpg"
+            src="https://static1.squarespace.com/static/557a0fd3e4b064e7f04db74f/t/56c4ece55f21e009ed3ad088/1455747361642/Ghost_Stories.jpg"
             alt=""
           />
           <div class="overlay"><span>number 6</span></div>
@@ -97,7 +97,7 @@
           </div>
           <div class="button-6">
             <div class="eff-6"></div>
-            <a href="https://www.imdb.com/title/tt2250192/" target="_blank">
+            <a href="https://youtu.be/E9r0MZzOIPM" target="_blank">
               watch me
             </a>
           </div>
